# GeneralGraphicsFormat

./: CMakeLists.txt  README.md  graphics_test.cpp  test.cpp
example/: example_file.txt  graphics_demo.ghs
include/: Graphics.h  GraphicsIO.h  general_graphics_file_format.h  general_graphics_file_io.h  string_utility.h
src/: GraphicsIO.cpp  general_graphics_file_io.cpp
